# file-sync-rs

./: .gitignore  Cargo.toml  README.md
src/: db.rs  main.rs  sync.rs  update.rs
src/gui/: lang.rs  mod.rs  style.rs  utils.rs
src/gui/views/: source.rs  target.rs
src/syncing/: mod.rs  sync.rs
