[package]
name = "file-sync-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version="0.10.0", features = ["svg", "tokio"] }
iced_aw = "0.7.0"
rfd = "0.12.1"
rusqlite = { version="0.29.0", features = ["bundled"] }
tokio = { version = "1.33.0", features = ["rt"] }
