[package]
name = "file-sync-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = { version = "0.4.31", features = ["serde"] }
dirs = "5.0.1"
futures = "0.3.29"
iced = { version="0.12.1", features = ["svg", "tokio"] }
rfd = "0.12.1"
rusqlite = { version="0.29.0", features = ["bundled"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.33.0", features = ["rt", "sync"] }
