[package]
name = "file-sync-rs"
version = "0.2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.40", features = ["serde"] }
dirs = "6.0.0"
futures = "0.3.31"
iced = { version = "0.13.1", features = ["svg", "tokio"] }
rfd = { version = "0.15.3" }
rusqlite = { version = "0.25.0", features = ["bundled"] }
self_update = "0.42.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["rt", "sync"] }
